force-app/main/default/objects/ApplicationRequirement__c/ApplicationRequirement__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Application Requirement</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Application Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>