force-app/main/default/objects/ApplicationRequirement__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Requirements</relationshipLabel>
    <relationshipName>Application_Deficiencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>