force-app/main/default/objects/ApplicationRequirement__c/fields/CreatePortalInboxTask__c.field-meta.xml
<CustomField>
    <fullName>CreatePortalInboxTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Portal Inbox Task</label>
    <type>Checkbox</type>
</CustomField>