force-app/main/default/objects/ApplicationRequirement__c/fields/DateChecked__c.field-meta.xml
<CustomField>
    <fullName>DateChecked__c</fullName>
    <label>Date Checked</label>
    <type>Date</type>
</CustomField>