force-app/main/default/objects/ApplicationRequirement__c/fields/IsDeficient__c.field-meta.xml
<CustomField>
    <fullName>IsDeficient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>Is the Applicant Deficient on this?  Is so, please check the box.</inlineHelpText>
    <label>Is Deficient?</label>
    <type>Checkbox</type>
</CustomField>