force-app/main/default/objects/ApplicationRequirement__c/fields/ParentApplicationRequirement__c.field-meta.xml
<CustomField>
    <fullName>ParentApplicationRequirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC071619- Created for PVL phase 1</description>
    <label>Parent Application Requirement</label>
    <referenceTo>ApplicationRequirement__c</referenceTo>
    <relationshipLabel>Application Requirements</relationshipLabel>
    <relationshipName>ApplicationRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>