force-app/main/default/objects/ApplicationRequirement__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <defaultValue>&quot;A - Application Received&quot;</defaultValue>
    <description>PacPoint-MV091619 - Created for PVL phase 1</description>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Application Received</fullName>
            </value>
            <value>
                <fullName>E - Executive Officer Review</fullName>
            </value>
            <value>
                <fullName>B - Board Review</fullName>
            </value>
            <value>
                <fullName>O - 2nd Board Review - Oral Interview</fullName>
            </value>
            <value>
                <fullName>X - Exam Phase</fullName>
            </value>
            <value>
                <fullName>L - License Review</fullName>
            </value>
            <value>
                <fullName>D - Dependency Review</fullName>
            </value>
            <value>
                <fullName>H - License Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>