force-app/main/default/objects/ApplicationRequirement__c/fields/RemarksTag__c.field-meta.xml
<CustomField>
    <fullName>RemarksTag__c</fullName>
    <description>PacPoint-FT112519 - Created for PVL phase 1. Created to be able to display the field on the documents created by the &quot;Doc Generator&quot;</description>
    <label>Remarks Tag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>