force-app/main/default/objects/ApplicationRequirement__c/fields/REQMT__c.field-meta.xml
<CustomField>
    <fullName>REQMT__c</fullName>
    <description>PacPoint-KN092419 - Created for PVL Phase 1</description>
    <formula>Requirement__r.ALIASRequirementNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ALIAS Requirement Number</inlineHelpText>
    <label>REQMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>