force-app/main/default/objects/ApplicationRequirement__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV081919 - Created for PVL phase 1</description>
    <label>Requirement</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>Application Requirements</relationshipLabel>
    <relationshipName>Application_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>