force-app/main/default/objects/ApplicationRequirement__c/fields/RequirementLongDescription__c.field-meta.xml
<CustomField>
    <fullName>RequirementLongDescription__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1</description>
    <inlineHelpText>This is the text that will show up on the deficiency letter.  you can edit and save the text if needed</inlineHelpText>
    <label>Requirement Long Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>