force-app/main/default/objects/ApplicationRequirement__c/fields/RequirementName__c.field-meta.xml
<CustomField>
    <fullName>RequirementName__c</fullName>
    <description>PacPoint-FT070119 - Created for PVL phase 1. Created to be used in the &quot;RelatedList&quot; multiline component on the Application Lightning Page</description>
    <formula>Requirement__r.Name</formula>
    <label>Requirement Name</label>
    <type>Text</type>
</CustomField>