force-app/main/default/objects/ApplicationRequirement__c/fields/SUB__c.field-meta.xml
<CustomField>
    <fullName>SUB__c</fullName>
    <description>PacPoint-KN092419 - Created for PVL Phase 1</description>
    <formula>Requirement__r.SubRequirementNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sub Requirement Number</inlineHelpText>
    <label>SUB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>